test/files/neg/macro-invalidret.check
Macros_Test_2.scala:2: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.BlackboxContext): c.Expr[Any]
 or      : (c: scala.reflect.macros.BlackboxContext): c.Tree
 found   : (c: scala.reflect.macros.BlackboxContext): Int
type mismatch for return type: Int does not conform to c.Expr[Any]
  def foo1 = macro Impls.foo1
                         ^
Macros_Test_2.scala:3: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.BlackboxContext): c.Expr[Any]
 or      : (c: scala.reflect.macros.BlackboxContext): c.Tree
 found   : (c: scala.reflect.macros.BlackboxContext): reflect.runtime.universe.Literal
type mismatch for return type: reflect.runtime.universe.Literal does not conform to c.Expr[Any]
  def foo2 = macro Impls.foo2
                         ^
two errors found
